fix: Java 8 compat - replace Set.of() with Collections.unmodifiableSet